--- a/app/src/main/res/layout/fragment_add_update_aluno.xml
+++ b/app/src/main/res/layout/fragment_add_update_aluno.xml
@@ -2,23 +2,36 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Adicionar"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAddAluno"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent" />
     <EditText
         android:id="@+id/edtTxtNome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="Nome"
-        android:nextFocusDown="@id/edtTxtSobrenome"
         android:inputType="textPersonName"
+        android:nextFocusDown="@id/edtTxtSobrenome"
         app:layout_constraintBottom_toTopOf="@+id/edtTxtTurma"
         app:layout_constraintEnd_toStartOf="@+id/edtTxtSobrenome"
         app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="@+id/guideline" />
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
     <EditText
         android:id="@+id/edtTxtSobrenome"
@@ -30,8 +43,10 @@
         app:layout_constraintBottom_toTopOf="@+id/edtTxtTurma"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/edtTxtNome" />
+        app:layout_constraintStart_toEndOf="@+id/edtTxtNome"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
     <EditText
         android:id="@+id/edtTxtTurma"
